--- a/styles.css
+++ b/styles.css
@@ -123,3 +123,16 @@ button{
         width: 30%;
     }
 }
+@media (max-width: 375px){
+    h1{
+        font-size: 40px;
+    }
+    button {
+        width: 95%;
+        color: white;
+    }
+    form input {
+        width: 45%;
+    }
+}
+
