--- a/styles.css
+++ b/styles.css
@@ -138,7 +138,7 @@ button{
 }
 
 @media (max-width: 350px){
-    .form input{
+    form input{
         width: 90%;
         border-top-right-radius: 2rem;
         border-bottom-right-radius: 2rem;
